--- a/nucleotide_diversity_chromosomes/02pi_window/Snakefile
+++ b/nucleotide_diversity_chromosomes/02pi_window/Snakefile
@@ -1,6 +1,4 @@
 
-# Snakemake pipeline to calculate average nucleotide diversity per site based on the output of SyRI
-
 
 SAMPLES=["R4", "R5", "W4", "W7"]
 
@@ -8,12 +6,12 @@ SAMPLES=["R4", "R5", "W4", "W7"]
 rule all:
    input:
       expand("output/04index_vcf/{sample}_syri_SNPs_gt.vcf.gz.tbi", sample=SAMPLES),
-      "output/06gt_matrix/merged_syri_SNPs_gt_dedup.txt",
-      "output/07pi/merged_syri_SNPs_gt_dedup_pi.txt"
+      "output/08pi/merged_syri_SNPs_gt_dedup_pi_ts.txt",
+      "output/08pi/merged_syri_SNPs_gt_dedup_pi_tv.txt",
 
 
-
-##vcfasm: Get SNPs and INDELs from VCF file produced by SyRI
+#=======================
+# Get SNPs and INDELs from VCF file produced by SyRI
 rule vcfasm:
    input:
       "data/{sample}_syri.vcf"
@@ -24,10 +22,12 @@ rule vcfasm:
 
       python $VCFASM vcfshv {input} {output}
    """
+#=======================
 
 
 
-##remove_INDELs: Remove INDELs, keep only SNPs
+#=======================
+# Remove INDELs, keep only SNPs
 rule remove_INDELs:
    input:
       "output/01vcfasm/{sample}_syri_SNPs_INDELs.vcf"
@@ -36,10 +36,12 @@ rule remove_INDELs:
    shell: """
       awk '{{ if(substr($3,1,3) == "SNP" || substr($1,1,1) == "#") print $0 }}' {input} > {output}
    """
+#=======================
 
 
 
-##add_genotype_vcf: format vcf to add genotype field
+#=======================
+# format vcf to add genotype field
 rule add_genotype_vcf:
    input:
       "output/02SNPs/{sample}_syri_SNPs.vcf"
@@ -59,10 +61,12 @@ rule add_genotype_vcf:
       # then copy vcf body and add GT field. Always altergantive allele because only one sample.
       grep -v ^# {input} | awk '{{ print $0"\\tGT\\t1" }}' >> {output}
    """
+#=======================
 
 
 
-##compress_vcf: compress vcf before index
+#=======================
+# compress vcf before index
 rule compress_vcf:
    input:
       "output/03gt_vcfs/{sample}_syri_SNPs_gt.vcf"
@@ -71,10 +75,12 @@ rule compress_vcf:
    shell: """
       bgzip -c {input} > {output}
    """
+#=======================
 
 
 
-##index_vcf: index vcf with tabix
+#=======================
+# index vcf with tabix
 rule index_vcf:
    input:
       "output/04index_vcf/{sample}_syri_SNPs_gt.vcf.gz"
@@ -83,10 +89,12 @@ rule index_vcf:
    shell: """
       tabix -p vcf {input}
    """
+#=======================
 
 
 
-##merge_vcf: merge indexed vcf files, add reference allele instead of missing allele
+#=======================
+# merge indexed vcf files, add reference allele instead of missing allele
 rule merge_vcf:
    input:
       index=expand("output/04index_vcf/{sample}_syri_SNPs_gt.vcf.gz.tbi", sample=SAMPLES),
@@ -98,10 +106,12 @@ rule merge_vcf:
 
       bcftools merge --missing-to-ref {input.vcfs} -o {output}
    """
+#=======================
 
 
 
-##filter_dup_snps: remove duplicated entries. I gues SyRI keeps them when a segment aligns to multiple locations
+#=======================
+# remove duplicated entries. I gues SyRI keeps them when a segment aligns to multiple locations
 rule filter_dup_snps:
    input:
       "output/05merge_vcf/merged_syri_SNPs_gt.vcf"
@@ -112,31 +122,51 @@ rule filter_dup_snps:
 
       bcftools norm --rm-dup snps {input} > {output}
    """
+#=======================
 
 
 
-##get_genotype_matrix: extract a genotype matrix from the merged vcf file
+#=======================
+# extract a genotype matrix from the merged vcf file
 rule get_genotype_matrix:
    input:
       "output/05merge_vcf/merged_syri_SNPs_gt_dedup.vcf"
    output:
       "output/06gt_matrix/merged_syri_SNPs_gt_dedup.txt"
    shell: """
-      cat {input} | grep -v ^## | cut -f 1,2,10-20 | sed 's/^#CHROM/CHROM/g' > {output}
+      cat {input} | grep -v ^## | cut -f 1,2,4,5,10-20 | sed 's/^#CHROM/CHROM/g' > {output}
    """
+#=======================
 
 
 
-##get_window_pi: calculate pi using a sliding window
-rule get_window_pi:
+#=======================
+# split genotype matrix into two matrix: transitions and transversions
+rule split_tstv:
    input:
       "output/06gt_matrix/merged_syri_SNPs_gt_dedup.txt"
    output:
-      "output/07pi/merged_syri_SNPs_gt_dedup_pi.txt"
+      ts="output/07gt_matrix_tstv/merged_syri_SNPs_gt_dedup_ts.txt",
+      tv="output/07gt_matrix_tstv/merged_syri_SNPs_gt_dedup_tv.txt",
    shell: """
-      Rscript scripts/calculate_window_pi.R {input} {output}
+      Rscript scripts/split_tstv.R {input} {output.ts} {output.tv}
    """
+#=======================
 
 
 
-
+#=======================
+# calculate pi using a sliding window
+rule get_window_pi:
+   input:
+      ts="output/07gt_matrix_tstv/merged_syri_SNPs_gt_dedup_ts.txt",
+      tv="output/07gt_matrix_tstv/merged_syri_SNPs_gt_dedup_tv.txt",
+      fai="data/PB655_01_Race0.bp.p_ctg_sorted_edited.fasta.fai"
+   output:
+      ts="output/08pi/merged_syri_SNPs_gt_dedup_pi_ts.txt",
+      tv="output/08pi/merged_syri_SNPs_gt_dedup_pi_tv.txt",
+   shell: """
+      Rscript scripts/calculate_window_pi.R {input.ts} {input.fai} {output.ts}
+      Rscript scripts/calculate_window_pi.R {input.tv} {input.fai} {output.tv}
+   """
+#=======================
